--- a/template.liquid
+++ b/template.liquid
@@ -1,19 +1,19 @@
 {% for tag in workspace.tags %}
 {% if tag.mine %}
 %{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
-%{T1}%{F#e4d898}{{tag.name}}%{F#e4d898}· %{F-}
+%{T1}%{F#03A9F4} {{tag.name}}%{F#03A9F4}· %{F-}
 %{A}
 {% elsif tag.visible  %}
 %{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
-%{T1}%{F#BF9A9B}{{tag.name}}%{F#BF9A9B}· %{F-}
+%{T1}%{F#BF9A9B} {{tag.name}}%{F#BF9A9B}· %{F-}
 %{A}
 {% elsif tag.busy  %}
 %{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
-%{T1}%{F#d1888a}{{tag.name}}· %{F-}
+%{T1}%{F#d1888a} {{tag.name}}%{F#d1888a}· %{F-}
 %{A}
 {% else tag.visible  %}
 %{A1:$SCRIPTPATH/change_to_tag {{workspace.index}} {{tag.index}}:}
-%{F#dddddd}%{T1}{{tag.name}}  %{F-}
+%{F#bbbbbb}%{T1} {{tag.name}}  %{F-}
 %{A}
 {% endif %}
 {% endfor %}
